--- a/LMA/Makefile
+++ b/LMA/Makefile
@@ -6,34 +6,34 @@
 
 ifeq ("$(COMPILER)","gfortran")
   FC=gfortran
-  DEBUGFLAGS = # -g
+  DEBUGFLAGS = -g
   FFLAGS=-O3 -fopenmp -march=skylake-avx512 -mtune=skylake-avx512 -mprefer-vector-width=512
   LDFLAGS=-O3 -fopenmp -march=skylake-avx512 -mtune=skylake-avx512 -mprefer-vector-width=512
 else ifeq ("$(COMPILER)","ifort")
   FC=ifort
-  DEBUGFLAGS = -g -qopt-report -traceback -check bounds -warn all
+  DEBUGFLAGS = -g # -qopt-report -traceback -check bounds -warn all
   FFLAGS=-O3 -xHost -qopt-zmm-usage=high -qopenmp -qopenmp-simd
   LDFLAGS=-O3 -xHost -qopt-zmm-usage=high -qopenmp -qopenmp-simd
 else ifeq ("$(COMPILER)","ftn")
   FC=ftn
-  DEBUGFLAGS = # -g
+  DEBUGFLAGS = -g
   FFLAGS=-O3 -hscalar3 -hvector3 -hcache3 -hnoacc -hpreferred_vector_width=512
   LDFLAGS=-O3 -hscalar3 -hvector3 -hcache3 -hnoacc -hpreferred_vector_width=512
-else ifeq ("$(COMPILER)","nvfortran-cpu")
+else ifeq ("$(COMPILER)","nvfortran-skl")
   FC=nvfortran
-  DEBUGFLAGS= # -g
+  DEBUGFLAGS= -g
   FFLAGS=-O3 -Mvect=simd:512 -tp=skylake -mp -target=multicore
   LDFLAGS=-O3 -Mvect=simd:512 -tp=skylake -mp -target=multicore
 else ifeq ("$(COMPILER)","nvfortran-p100")
   FC=nvfortran
-  DEBUGFLAGS=
-  FFLAGS=-g -O2 -Minfo=accel -acc -gpu=cc60
-  LDFLAGS=-g -O2 -Minfo=accel -acc -gpu=cc60
+  DEBUGFLAGS= -g
+  FFLAGS=-O2 -Minfo=accel -acc -gpu=cc60
+  LDFLAGS=-O2 -Minfo=accel -acc -gpu=cc60
 else ifeq ("$(COMPILER)","nvfortran-a100")
   FC=nvfortran
-  DEBUGFLAGS=
-  FFLAGS=-g -O2 -Minfo=accel -acc -gpu=cc80
-  LDFLAGS=-g -O2 -Minfo=accel -acc -gpu=cc80
+  DEBUGFLAGS=-g
+  FFLAGS=-O2 -march=x86-64-v3 -Minfo=accel -acc -gpu=cc80
+  LDFLAGS=-O2 -march=x86-64-v3 -Minfo=accel -acc -gpu=cc80
 else ifneq ("$(MAKECMDGOALS)","clean")
   $(error Variable COMPILER not set, or unknown compiler)
 endif
